--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ __wm.bt(750,27,25,2,"web","http://fredmadrid.com/","20241118130319",1996,"https:
     <header class="atail-header">
         <div class=" container-fluid ">
             <div class="logo  atail-logo-portrait">
-                <a href="https://web.archive.org/web/20241118130319/http://fredmadrid.com/index.html">
+                <a href="index.html">
                     <span class="atail-text-logo">
                         <img src="./fredmadrid_index_files/logo.svg" alt="">
                     </span>
@@ -125,10 +125,10 @@ __wm.bt(750,27,25,2,"web","http://fredmadrid.com/","20241118130319",1996,"https:
 
             <div class="project-preview-images  ">
                 <div class="preview-images-item">
-                    <img src="./fredmadrid_index_files/brand_strategy.jpg" alt="" class="project-1">
+                    <img src="./fredmadrid_index_files/brand_strategy.jpg" alt="" class="project-1 images-item-active">
                     <img src="./fredmadrid_index_files/ux_ui_design.jpg" alt="" class="project-2">
                     <img src="./fredmadrid_index_files/mobile_prototyping.jpg" alt="" class="project-3">
-                    <img src="./fredmadrid_index_files/graphic_design.jpg" alt="" class="project-4 images-item-active">
+                    <img src="./fredmadrid_index_files/graphic_design.jpg" alt="" class="project-4 ">
                     <img src="./fredmadrid_index_files/web_design_web_development.jpg" alt="" class="project-5">
                 <div class="animate-wrap"><div class="animate-box-bot"><div></div><div></div><div></div></div><div class="animate-box-top"><div></div><div></div><div></div></div></div><div class="animate-wrap"><div class="animate-box-bot"><div></div><div></div><div></div></div><div class="animate-box-top"><div></div><div></div><div></div></div></div></div>
             </div>
@@ -169,7 +169,7 @@ __wm.bt(750,27,25,2,"web","http://fredmadrid.com/","20241118130319",1996,"https:
 
                                                 <div class="preview-article-header">
                                                     <h2>
-                                                        <a data-action="open-full-post" data-post="project-1" href="https://web.archive.org/web/20241118130319/http://fredmadrid.com/#">Brand Strategy</a>
+                                                        <a data-action="open-full-post" data-post="project-1" href="#">Brand Strategy</a>
                                                     </h2>
                                                 </div>
                                                 <div class="preview-article-text">
@@ -179,7 +179,7 @@ __wm.bt(750,27,25,2,"web","http://fredmadrid.com/","20241118130319",1996,"https:
                                                     </div>
                                                 </div>
 
-                                                <a class="tmp-class open-full-post is-loading" data-action="open-full-post" data-post="project-1" href="https://web.archive.org/web/20241118130319/http://fredmadrid.com/#"><span>View Brands</span></a>
+                                                <a class="tmp-class open-full-post is-loading" data-action="open-full-post" data-post="project-1" href="#"><span>View Brands</span></a>
                                             </article>
                                         </div>
                                     </div>
@@ -201,7 +201,7 @@ __wm.bt(750,27,25,2,"web","http://fredmadrid.com/","20241118130319",1996,"https:
 
                                                 <div class="preview-article-header">
                                                     <h2>
-                                                        <a data-action="open-full-post" data-post="project-2" href="https://web.archive.org/web/20241118130319/http://fredmadrid.com/#">UX &amp; UI Design</a>
+                                                        <a data-action="open-full-post" data-post="project-2" href="#">UX &amp; UI Design</a>
                                                     </h2>
                                                 </div>
                                                 <div class="preview-article-text">
@@ -211,7 +211,7 @@ __wm.bt(750,27,25,2,"web","http://fredmadrid.com/","20241118130319",1996,"https:
                                                     </div>
                                                 </div>
 
-                                                <a class="tmp-class open-full-post is-loading" data-action="open-full-post" data-post="project-2" href="https://web.archive.org/web/20241118130319/http://fredmadrid.com/#"><span>View Designs</span></a>
+                                                <a class="tmp-class open-full-post is-loading" data-action="open-full-post" data-post="project-2" href="#"><span>View Designs</span></a>
                                             </article>
                                         </div>
                                     </div>
@@ -232,7 +232,7 @@ __wm.bt(750,27,25,2,"web","http://fredmadrid.com/","20241118130319",1996,"https:
 
                                                 <div class="preview-article-header">
                                                     <h2>
-                                                        <a data-action="open-full-post" data-post="project-3" href="https://web.archive.org/web/20241118130319/http://fredmadrid.com/#">Mobile Prototyping</a>
+                                                        <a data-action="open-full-post" data-post="project-3" href="#">Mobile Prototyping</a>
                                                     </h2>
                                                 </div>
                                                 <div class="preview-article-text">
@@ -242,7 +242,7 @@ __wm.bt(750,27,25,2,"web","http://fredmadrid.com/","20241118130319",1996,"https:
                                                     </div>
                                                 </div>
 
-                                                <a class="tmp-class open-full-post is-loading" data-action="open-full-post" data-post="project-3" href="https://web.archive.org/web/20241118130319/http://fredmadrid.com/#"><span>View Prototypes</span></a>
+                                                <a class="tmp-class open-full-post is-loading" data-action="open-full-post" data-post="project-3" href="#"><span>View Prototypes</span></a>
                                             </article>
                                         </div>
                                     </div>
@@ -264,7 +264,7 @@ __wm.bt(750,27,25,2,"web","http://fredmadrid.com/","20241118130319",1996,"https:
 
                                                 <div class="preview-article-header">
                                                     <h2>
-                                                        <a data-action="open-full-post" data-post="project-4" href="https://web.archive.org/web/20241118130319/http://fredmadrid.com/#">Graphic Design</a>
+                                                        <a data-action="open-full-post" data-post="project-4" href="#">Graphic Design</a>
                                                     </h2>
                                                 </div>
                                                 <div class="preview-article-text">
@@ -274,7 +274,7 @@ __wm.bt(750,27,25,2,"web","http://fredmadrid.com/","20241118130319",1996,"https:
                                                     </div>
                                                 </div>
 
-                                                <a class="tmp-class open-full-post is-loading" data-action="open-full-post" data-post="project-4" href="https://web.archive.org/web/20241118130319/http://fredmadrid.com/#"><span>View Print Designs</span></a>
+                                                <a class="tmp-class open-full-post is-loading" data-action="open-full-post" data-post="project-4" href="#"><span>View Print Designs</span></a>
                                             </article>
                                         </div>
                                     </div>
@@ -296,7 +296,7 @@ __wm.bt(750,27,25,2,"web","http://fredmadrid.com/","20241118130319",1996,"https:
 
                                     <div class="preview-article-header">
                                         <h2>
-                                            <a data-action="open-full-post" data-post="project-5" href="https://web.archive.org/web/20241118130319/http://fredmadrid.com/#">Web Design &amp; Web Development</a>
+                                            <a data-action="open-full-post" data-post="project-5" href="#">Web Design &amp; Web Development</a>
                                         </h2>
                                     </div>
                                     <div class="preview-article-text">
@@ -306,7 +306,7 @@ __wm.bt(750,27,25,2,"web","http://fredmadrid.com/","20241118130319",1996,"https:
                                         </div>
                                     </div>
 
-                                    <a class="tmp-class open-full-post is-loading" data-action="open-full-post" data-post="project-5" href="https://web.archive.org/web/20241118130319/http://fredmadrid.com/#"><span>View Web Designs</span></a>
+                                    <a class="tmp-class open-full-post is-loading" data-action="open-full-post" data-post="project-5" href="#"><span>View Web Designs</span></a>
                                 </article>
                             </div>
                         </div>
@@ -317,7 +317,7 @@ __wm.bt(750,27,25,2,"web","http://fredmadrid.com/","20241118130319",1996,"https:
                     </div>
                 <div class="atail-scroll display-none"><span class="atail-scroll-line" style="height: 0px;"></span></div><div class="atail-scroll display-none"><span class="atail-scroll-line" style="height: 0px;"></span></div><div class="atail-scroll display-none"><span class="atail-scroll-line" style="height: 0px;"></span></div><div class="atail-scroll display-none"><span class="atail-scroll-line" style="height: 0px; top: 0px;"></span></div></div>
                 <div class="col-md-2 all-projects-ajax-btn hide">
-                    <a href="https://web.archive.org/web/20241118130319/http://fredmadrid.com/#" data-action="all-projects" data-count="10"><span><span></span><span></span></span>All Projects</a>
+                    <a href="#" data-action="all-projects" data-count="10"><span><span></span><span></span></span>All Projects</a>
                 </div>
             </div>
 
