--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ __wm.bt(750,27,25,2,"web","http://fredmadrid.com/","20241118130319",1996,"https:
 
             <div class="project-preview-images  ">
                 <div class="preview-images-item">
-                    <img src="./fredmadrid_index_files/brand_strategy.jpg" alt="" class="project-1 images-item-active">
+                    <img src="./fredmadrid_index_files/brand_strategy.jpg" alt="" class="project-1">
                     <img src="./fredmadrid_index_files/ux_ui_design.jpg" alt="" class="project-2">
                     <img src="./fredmadrid_index_files/mobile_prototyping.jpg" alt="" class="project-3">
                     <img src="./fredmadrid_index_files/graphic_design.jpg" alt="" class="project-4 ">
